--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Amir Hamza | Personal Website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" sizes="32x32" href="/Images/favicon.jpg" type="image/jpg">
+    <link rel="shortcut icon" sizes="32x32" href="/images/favicon.jpg" type="image/jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
@@ -39,7 +39,7 @@
         </div>
         <div class="main-header">
             <div class="logo">
-                <img src="/Images/cover.jpg" alt="Amir Hamza Logo" id="amirlogo">
+                <img src="/images/cover.jpg" alt="Amir Hamza Logo" id="amirlogo">
                 <div class="logo-text">
                     <h1>Amir Hamza</h1>
                     <p>Web Developer & Designer</p>
@@ -72,7 +72,7 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-image">
-                <img src="/Images/user1.jpg" alt="Amir Hamza">
+                <img src="/images/user1.jpg" alt="Amir Hamza">
             </div>
             <div class="about-text">
                 <h3>Hello, I'm Amir Hamza</h3>
@@ -115,7 +115,7 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="/Images/gorurHat.PNG" alt="Project 1">
+                        <img src="/images/gorurHat.PNG" alt="Project 1">
                     </div>
                     <div class="portfolio-info">
                         <h3>Gorur Hat Website</h3>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="/Images/protfolio1.PNG" alt="Project 2">
+                        <img src="/images/protfolio1.PNG" alt="Project 2">
                     </div>
                     <div class="portfolio-info">
                         <h3>Portfolio Template</h3>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="/Images/bibaho.PNG" alt="Project 3">
+                        <img src="/images/bibaho.PNG" alt="Project 3">
                     </div>
                     <div class="portfolio-info">
                         <h3>Marriage Biodata Web</h3>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="/Images/sleepy.png" alt="Project 3">
+                        <img src="/images/sleepy.png" alt="Project 3">
                     </div>
                     <div class="portfolio-info">
                         <h3>Sleepy Web App</h3>
@@ -161,7 +161,7 @@
                 <!--CV-->
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="/Images/cv.PNG" alt="Project 3">
+                        <img src="/images/cv.PNG" alt="Project 3">
                     </div>
                     <div class="portfolio-info">
                         <h3>Amir Hamza CV</h3>
@@ -174,7 +174,7 @@
 
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="/Images/web1.PNG" alt="Project 3">
+                        <img src="/images/web1.PNG" alt="Project 3">
                     </div>
                     <div class="portfolio-info">
                         <h3>Company Website</h3>
