--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="/images/sleepy.png" alt="Project 3">
+                        <img src="/images/" alt="Project 3">
                     </div>
                     <div class="portfolio-info">
                         <h3>Sleepy Web App</h3>
