--- a/index.html
+++ b/index.html
@@ -76,19 +76,17 @@
             </div>
             <div class="about-text">
                 <h3>Hello, I'm Amir Hamza</h3>
-                <p>I am a professional web developer with over 5 years of experience in creating modern and responsive
-                    websites. My expertise includes HTML, CSS, JavaScript, and various frameworks like React and Vue.js.
+                <p>I am a final-year Computer Science Engineering student at Daffodil International University with a strong passion for web development and modern technologies. Throughout my academic journey, I have developed solid skills in HTML, CSS, JavaScript, and frameworks such as React.
                 </p>
-                <p>I hold a Bachelor's degree in Computer Science from a prestigious university and have worked with
-                    numerous clients worldwide to deliver high-quality web solutions.</p>
-                <p>When I'm not coding, you can find me reading books, traveling, or exploring new technologies. I
-                    believe in continuous learning and always strive to improve my skills.</p>
+                <p>Driven by curiosity and a love for problem-solving, I have worked on various academic and personal projects that reflect my dedication to building responsive and user-friendly web applications. I am constantly seeking opportunities to learn and grow in the ever-evolving tech industry.
+                </p>
+                <p>When I'm not coding, you can find me reading books, traveling, or exploring new technologies. I believe in continuous learning and always strive to improve my skills.</p>
                 <div class="skills">
                     <h4>My Skills:</h4>
                     <ul>
                         <li>HTML5, CSS3, JavaScript (ES6+)</li>
-                        <li>React, Vue.js, Angular</li>
-                        <li>Node.js, Express</li>
+                        <li>React, Angular</li>
+                        <li>Node.js</li>
                         <li>MySQL, MongoDB</li>
                         <li>Git, GitHub</li>
                         <li>Responsive Web Design</li>
@@ -106,8 +104,6 @@
         <h2 class="section-title">My Portfolio</h2>
         <div class="portfolio-tabs">
             <a href="#web" class="btn" style="margin-top: 20px;">Web Projects</a>
-            <a href="#matrimonial" class="btn" style="margin-top: 20px;">Matrimonial Biodata</a>
-            <a href="#calculator" class="btn" style="margin-top: 20px;">Calculator</a>
         </div>
 
         <!-- Web Projects Tab -->
