--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <h3>Company Website</h3>
                         <p>A modern and responsive website layout designed for corporate use, featuring a clean user interface, organized content structure, and intuitive navigation. The layout includes sections for company overview, services, team profiles, contact forms, and a call-to-action area — all optimized for performance and user experience across devices.
                         </p>
-                        <a href="https://amir160s.github.io/CV/" class="btn" target="_blank">View
+                        <a href="https://amir160s.github.io/company/" class="btn" target="_blank">View
                             Project</a>
                     </div>
                 </div>
