--- a/index.html
+++ b/index.html
@@ -180,6 +180,20 @@
                             Project</a>
                     </div>
                 </div>
+
+                <div class="portfolio-item">
+                    <div class="portfolio-image">
+                        <img src="calulator.PNG" alt="Project 3">
+                    </div>
+                    <div class="portfolio-info">
+                        <h3>Calculator</h3>
+                        <p>A sleek, responsive calculator website with a clean interface, offering basic, scientific, and financial calculators. It features easy navigation, real-time results, user instructions, and a clear call-to-action, optimized for performance across all devices.
+                        </p>
+                        <a href="https://amir160s.github.io/company/" class="btn" target="_blank">View
+                            Project</a>
+                    </div>
+                </div>
+                
             </div>
         </div>
 
