--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <h3>Calculator</h3>
                         <p>A sleek, responsive calculator website with a clean interface, offering basic, scientific, and financial calculators. It features easy navigation, real-time results, user instructions, and a clear call-to-action, optimized for performance across all devices.
                         </p>
-                        <a href="https://amir160s.github.io/company/" class="btn" target="_blank">View
+                        <a href="https://amir160s.github.io/calculator/" class="btn" target="_blank">View
                             Project</a>
                     </div>
                 </div>
